# trabajo-de-titulo-applicative-do-reordering

./: .gitignore  .gitmodules  Makefile  README.md
.agents/skills/monad-sintectic-programs/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  verify_dev_toolchain.sh
config/: cabal.project
docs/: architecture.md  renamer.md  toolchain.md
experiments/: build_precedence_graph.py  build_precedence_graph_files.py
experiments/IO-monad/: IO-monad.cabal  main.hs
experiments/ado/: ado.cabal  main.hs
experiments/applicative-do/: .gitignore  README.md  run.sh
experiments/applicative-do/src/: Main.hi  Main.hs
experiments/main-example/: main-example.cabal
experiments/main-example-qdo/: main.hs
experiments/main-example/permutations/: main-0.hs  main-1.hs  main-10.hs  main-11.hs  main-12.hs  main-13.hs  main-14.hs  main-15.hs  main-16.hs  main-17.hs  main-18.hs  main-19.hs  main-2.hs  main-3.hs  main-4.hs  main-5.hs  main-6.hs  main-7.hs  main-8.hs  main-9.hs
experiments/maybe-example/: cabal.project  main.hs  maybe-example.cabal
experiments/maybe-example-qdo/: main.hs
experiments/maybe-example/permutations/: main-1.hs  main-2.hs  main-3.hs  main-4.hs  main-5.hs
experiments/maybe-examples-backup/1/: main.hs  maybe-example-qdo.cabal
experiments/maybe-examples-backup/4-defs/main/: maybe-examples-4defs-main.cabal
experiments/maybe-examples-backup/4-defs/no-deps/: main.hs  maybe-examples-4defs-no-deps.cabal
experiments/maybe-examples-backup/main-example/: main-example-qdo.cabal  main.hs
experiments/maybe-examples-backup/two-statements/: main.hs  two-statements.cabal
experiments/maybe-monad/: cases.md
experiments/maybe-monad/cases/binders/tuple-pattern/03-binary/: main.hs  maybe-monad-cases-binders-tuple-pattern-n03-binary.cabal
experiments/maybe-monad/cases/body-stmts/independent/04/: maybe-monad-cases-body-stmts-independent-n04.cabal
experiments/maybe-monad/cases/shadowing/rebind-same-name/03/: main.hs  maybe-monad-cases-shadowing-rebind-same-name-n03.cabal
experiments/probability-monad/: cases.md
experiments/probability-monad/cases/dependency-shapes/two-chains/04-interpolated/: main.hs  probability-monad-cases-dependency-shapes-two-chains-n04-interpolated.cabal
experiments/probability-monad/cases/shadowing/read-before-rebind/03/: main.hs  probability-monad-cases-shadowing-read-before-rebind-n03.cabal
experiments/probability-monad/dice-example/: main.hs  probability-monad-dice-example.cabal
experiments/small-ado/: main.hs
experiments/two-statements/permutations/: main-1.hs
literature/: permutaciones_asignaciones.tex
logs/compiler/default/: ghc0.txt  ghc1.txt
logs/compiler/quick/: ghc0.txt  ghc2.txt  ghc3_rnTrace_WAR_RAW_WAW.txt  ghc_dependency_graph.txt  ghc_quick_second_compilation.txt  ghc_quick_test_compilation.txt
logs/experiments/main-example/: all-permutations.txt  default-tree.txt  raw-compilation.txt  raw-logs-graph.txt  raw-logs-no-reorder.txt
logs/experiments/maybe-example/: all-permutations.txt  default-tree.txt  raw-compilation.txt  raw-logs-graph.txt  raw-logs-no-reorder.txt  rn-trace-dependencies.txt
logs/experiments/maybe-example-qdo/: raw-logs-graph.txt
logs/experiments/two-statements/: all-permutations.txt  default_tree.txt  raw-compilation.txt
patches/: 0001-driver-add-reorder-ado-flag.patch  0002-exp-clone-input-applicative-do.patch  0002-renamer-experiment-clone-input-ado.patch  0003-renamer-reorder-algorithm-ado.patch  0004-control-monad-qualified-do-commutative-monad.patch  0005-renamer-monad-reordering-complete-trace.patch  0006-renamer-select-permutation-by-index-flag.patch
reports/informe/: bibliografia.bib  main.tex  memorize.md  reports-context.md  structure.md
reports/informe/secciones/: anexoA.tex  cap2.tex  cap3.tex  conclu.tex  intro.tex  marco_teorico.tex  portada.tex  problema.tex  solucion.tex  validacion.tex
reports/informe/secciones/anexos/: corpus.tex  implementacion.tex  (+3 more)
reports/propuesta/: propuesta.aux  propuesta.bbl  propuesta.fdb_latexmk  propuesta.fls  propuesta.out  propuesta.tex  upropuesta.cls
reports/propuesta/secciones/: estado_del_arte.tex  introduccion.tex  objetivos.tex  plan_de_trabajo.tex  preliminares.tex  solucion_propuesta.tex  trabajo_adelantado.tex
scripts/: add_ghc_submodule.sh  apply_patches.sh  build.sh  test.sh
scripts/cabal/: create-prob-project.sh  create-project.sh
scripts/semantic-validation/: common.sh  reorder-cabal.sh  reorder-ghc.sh  rewrite-do-variant.sh
scripts/setup-ghc/: add_ghc_submodule.sh  init_submodules.sh  verify_ghc_commit.sh
templates/cabal/: comments-template.cabal  no-comments-template.cabal
templates/programs/: maybe-monad.hs  probability-monad.hs
tests/IO-monad/results/: permutation_1.diff
(+244 files in other folders)
