cabal-version:   3.14
name:            maybe-monad-cases-binders-tuple-pattern-n03-binary
version:         0.1.0.0
license:         NONE
author:          estebanrb22
maintainer:      esteban.romero.b@ug.uchile.cl
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable maybe-monad-cases-binders-tuple-pattern-n03-binary
    import:           warnings
    main-is:          main.hs
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   .
    default-language: GHC2024
