cabal-version:   3.14
name:            maybe-monad-cases-body-stmts-independent-n04
version:         0.1.0.0
license:         NONE
author:          estebanrb22
maintainer:      esteban.romero.b@ug.uchile.cl
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable maybe-monad-cases-body-stmts-independent-n04
    import:           warnings
    main-is:          main.hs
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   .
    default-language: GHC2024
