cabal-version:   3.14
name:            probability-monad-cases-shadowing-read-before-rebind-n03
version:         0.1.0.0
license:         NONE
author:          estebanrb22
maintainer:      esteban.romero.b@ug.uchile.cl
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable probability-monad-cases-shadowing-read-before-rebind-n03
    import:           warnings
    main-is:          main.hs
    build-depends:    base ^>=4.22.0.0,
                      probability ^>=0.2.9.1
    hs-source-dirs:   .
    default-language: GHC2024
